apps/media/dispatcharr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: dispatcharr
    app.kubernetes.io/name: dispatcharr
  name: dispatcharr
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: dispatcharr
      app.kubernetes.io/name: dispatcharr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: dispatcharr
        app.kubernetes.io/name: dispatcharr
    spec:
      containers:
        - name: dispatcharr
          image: dispatcharr
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 9191
              name: http
              protocol: TCP

          readinessProbe:
            failureThreshold: 3
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: http
            timeoutSeconds: 1

          livenessProbe:
            tcpSocket:
              port: http
            failureThreshold: 5
            initialDelaySeconds: 180
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10

          startupProbe:
            failureThreshold: 30
            periodSeconds: 5
            successThreshold: 1
            tcpSocket:
              port: http
            timeoutSeconds: 1

          resources:
            limits:
              memory: 1008Mi
              nvidia.com/gpu: 1
            requests:
              cpu: 15m
              memory: 991Mi

          volumeMounts:
            - mountPath: /data
              name: data

      nodeSelector:
        nvidia.com/gpu.present: "true"
      restartPolicy: Always
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: smb-dispatcharr-claim
